# HSGR

./: .gitignore  HSGR_nfflr.py  HSGR_noBP.py  HSGR_submit.sh  HSGR_submit_NOBP.sh  LICESNE  MANIFEST.in  README.md  compute_scaled_rdfs.py  control_nfflr.py  control_submit.sh  fine_tuning.py  fine_tuning_submit.sh  losses.txt  setup.cfg
examples/: SINN.py  control_nfflr.py  fine_tuning.py  unit_cell.py
nuces/: graph.py  train.py
nuces/dataset/: dataset.py
nuces/layers/: attn_layers.py  embeddings.py  layers.py  utils.py
nuces/model/: model.py
nuces/noise/: gaussian_noise.py  utils.py
nuces/train/: train.py
sinn/: __init__.py  graph.py
sinn/dataset/: dataset.py  space_groups.py
sinn/examples/: ALIGNN.py  ALIGNN_PYG.py  Alignn-k17-L4-int5-n7-combiner0.pk  Alignn-k17-L4-int5-n7-combiner1.pk  Alignn_Multihead-k17-L8-int5-n7-combiner0.pk  Alignn_Multihead-k17-L8-int5-n7-combiner1.pk  COMBINER.py  DHL.py  EVALAUTE.py  EVALUATE.py  EVALUATE_EXPR.py  EXTEND.py  FIG-ATOMWISE-PCA.py  FIG.py  FIG_EXPR.py  FIG_SIM.py  GET-CV-LOC.py  PCA.py  SCHNET.py  SINN.py  SINN_CR.py  SINN_EXT.py  SINN_FWHOOK.py  SINN_SIM.ipynb  SINN_SIM.py  colloids_run_smd.py  example.yaml  gen_traj.py  process_model.sbatch  trial_nfflr.py  unit_cell.py
sinn/graph/: graph.py  graph_pyg.py  utils.py
sinn/layers/: attn_layers.py  embeddings.py  embeddings_pyg.py  layers.py  layers_pyg.py  utils.py  utils_pyg.py
sinn/model/: alignn.py  alignn_pyg.py  combiner.py  (+3 more)
spg_classification/: HSGR_nfflr.py
unit_cell_determination/: MLP.py  RADFAC.py  alignn_jp.py  compute_scaled_rdfs.py  utils.py
(+40 files in other folders)
