[metadata]
name = SINN
version = 1.0.0
author = John Marquardt
description = A size invariant Nerual Network for classifying space groups
long_description = file: README.md
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests
    docs